feat(p0)-reference-bible: implemented
